--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,62 @@
 body {
-	margin: 0px;
+	margin: 0;
 	font-family: "Maiandra GD";
+	font-size: 20px;
+	background-color: #81F7BE;
+}
+
+.title {
+	margin: auto;
+	max-width: 650px;
+	text-align: center;
+	font-size: 50px;
+}
+
+.box {
+	background-image: "../images/fundo.png";
+	display: flex;
+	flex-direction: row;
+	max-width: 650px;
+	margin: auto;
+}
+
+.logo {
+	margin-left: 50px;
+	margin-right: 25px;
+}
+
+.login {
+	padding-top: 60px;
+}
+
+.login a {
+	margin-left: 40px;
+	text-decoration: none;
+	font-color: black;
+}
+
+.login a:hover {
+
+}
+
+.form-control {
+	width: 250px;
+	height: 23px;
+}
+
+.button {
+	font-family: "Maiandra GD";
+	font-size: 20px;
+	height: 30px;
+	width: 100px;
+}
+
+.cadastro {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+}
+
+.cad {
+	margin-right: 50px;
 }
