--- a/assets/css/styleSuasMusicas.css
+++ b/assets/css/styleSuasMusicas.css
@@ -57,3 +57,8 @@ footer {
     display: flex;
     flex-direction: column;
 }
+
+.buttonFooter {
+    display: flex;
+    justify-content: center;
+}
