--- a/assets/css/styleSuasMusicas.css
+++ b/assets/css/styleSuasMusicas.css
@@ -7,25 +7,53 @@ body {
     
 }
 
+header {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.nome {
+    justify-content: center;
+    text-align: center;
+    line-height: 50px;
+}
+
 section {
     display: flex;
     justify-content: center;
 }
 
 .container {
-    background-color: red;
     display: flex;
     justify-content: center;
     flex-direction: row;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1400px;
 }
 
 .tabelaSuasMusicas {
     flex: 2;
-    background-color: blue;
     margin: 4px;
     min-height: 143px;
+}
+
+.tabelaMusicas {
+    background-color: white;
+    border-radius: 5px;
+    padding: 5px;
+    border-collapse: collapse;
+    border: 1px solid black;
+}
+
+.colunas {
+    background-color: #2efe64;
+}
+
+tr td {
+  padding-left: 2px;  
+  border: 1px solid black;
 }
 
 table {
@@ -34,7 +62,6 @@ table {
 
 .infoMusica {
     flex: 1;
-    background-color: pink;
     margin: 4px;
     padding: 4px;
     min-height: 143px;
@@ -42,7 +69,8 @@ table {
 
 .letra {
     flex: 3;
-    background-color: yellow;
+    background-image: url('../images/fundo-letra.png');
+    background-size: cover;
     margin: 4px;
     padding: 4px;
     min-height: 143px;
@@ -61,4 +89,14 @@ footer {
 .buttonFooter {
     display: flex;
     justify-content: center;
+}
+
+button {
+    border-radius: 5px;
+    height: 30px;
+    font-size: 18px;
+}
+
+footer {
+    margin-top: 30px;
 }
