--- a/assets/css/styleEditarPlaylist.css
+++ b/assets/css/styleEditarPlaylist.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: "Maiandra-GD";
+    font-family: "Maiandra GD";
     background-image: url('../images/fundo.jpg');
     background-size: cover;
 }
@@ -10,6 +10,12 @@ header {
     justify-content: center;
     margin-top: 20px;
     margin-bottom: 20px;
+}
+
+.nome {
+    justify-content: center;
+    text-align: center;
+    line-height: 50px;
 }
 
 section {
