--- a/assets/css/stylePlaylists.css
+++ b/assets/css/stylePlaylists.css
@@ -76,3 +76,12 @@ button {
     height: 30px;
     font-size: 18px;
 }
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:visited{
+    color: black;
+}
