--- a/public/assets/css/styleTemplate.css
+++ b/public/assets/css/styleTemplate.css
@@ -1,3 +1,7 @@
+body {
+	color: white;
+}
+
 header {
 	background-color: black;
 	height: 50px;
@@ -97,6 +101,47 @@ nav a:hover {
 	margin-bottom: 15px;
 	border-radius: 5px;
 }
+
+.feed-item {
+	background-color: rgb(128, 128, 128);
+	border: 1px solid #c9cacc;
+	border-radius: 5px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	max-width: 75%;
+	display: flex;
+	flex-direction: column;
+	padding-top: 5px;
+	padding-left: 15px;
+	margin-left: 15px;
+}
+
+.feed-item img {
+	margin-right: 10px;
+}
+
+.music-title {
+	color: black;
+	font-size: 25px;
+	font-weight: bolder;
+}
+
+.music-artist {
+	color: white;
+	font-weight: bold;
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
+
+.music-info {
+	color: white;
+	font-weight: bold;
+	margin-bottom: 5px;
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
+
+
 
 @media (max-width: 768px) {
 	.toggle {
