--- a/public/assets/css/styleTemplate.css
+++ b/public/assets/css/styleTemplate.css
@@ -113,6 +113,7 @@ nav a:hover {
 	flex-direction: column;
 	padding-top: 5px;
 	padding-left: 15px;
+	padding-bottom: 5px;
 	margin-left: 15px;
 }
 
