Tela para exibição de música na tela criada. Trabalhando retorno de dados

--- a/public/assets/css/styleTemplate.css
+++ b/public/assets/css/styleTemplate.css
@@ -117,6 +117,14 @@ nav a:hover {
 	margin-left: 15px;
 }
 
+.feed-item:hover {
+	background-color: #c9cacc;
+}
+
+a:hover {
+	text-decoration: none;
+}
+
 .feed-item img {
 	margin-right: 10px;
 }
