--- a/public/assets/css/styleTemplate.css
+++ b/public/assets/css/styleTemplate.css
@@ -102,55 +102,66 @@ nav a:hover {
 	border-radius: 5px;
 }
 
-.feed-item {
-	background-color: rgb(128, 128, 128);
-	border: 1px solid #c9cacc;
-	border-radius: 5px;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	max-width: 75%;
-	display: flex;
-	flex-direction: column;
-	padding-top: 5px;
-	padding-left: 15px;
-	padding-bottom: 5px;
-	margin-left: 15px;
-}
-
-.feed-item:hover {
-	background-color: #c9cacc;
-}
-
 a:hover {
 	text-decoration: none;
 }
 
-.feed-item img {
-	margin-right: 10px;
+/* DROPDOWN MUSICS */
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	z-index: 1;
 }
 
-.music-title {
+.mine-dropdown:hover .dropdown-content {
+	display: block;
+}
+
+.dropdown-content a {
 	color: black;
-	font-size: 25px;
-	font-weight: bolder;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
 }
 
-.music-artist {
+.dropdown-content a:hover {
+	background-color: #b1b1b1
+}
+
+/* PLAYLISTS */
+
+.grid-playlists {
+	display: grid;
+	grid-template-columns: 200px 200px 200px 200px;
+	grid-gap: 10px;
+	padding: 10px;
+}
+
+.grid-playlists a {
 	color: white;
-	font-weight: bold;
-	margin-top: 2px;
-	margin-bottom: 2px;
 }
 
-.music-info {
-	color: white;
-	font-weight: bold;
-	margin-bottom: 5px;
-	margin-top: 2px;
-	margin-bottom: 2px;
+.playlist-item {
+	border: 2.5px solid black;
+	padding: 10px;
+	border-radius: 20px;
+	background-color: rgb(99, 99, 99);
 }
 
+.playlist-item:hover {
+	background-color: rgb(128, 128, 128);
+}
 
+.playlist-name {
+	font-weight: 900;
+	font-size: 30px;
+}
+
+/* RESPONSIVITY */
 
 @media (max-width: 768px) {
 	.toggle {
